Fix: The site editor creates a large gap where the slideout is implemented in the code

--- a/assets/src/css/site/_wordpress.scss
+++ b/assets/src/css/site/_wordpress.scss
@@ -37,3 +37,13 @@ body.logged-in.admin-bar {
         top: var(--wp-admin--admin-bar--height);
     }
 }
+
+
+
+/**
+ * WordPress block editor patch
+ */
+
+.edit-site-block-editor__block-list [data-title="slideout"] {
+    display: none;
+}
